language/move-prover/tests/sources/functional/resources.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/functional/resources.move:39:6 ───
    │
 39 │      ensures exists<R>(Signer::spec_address_of(account));
    │      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/resources.move:32:5: create_resource_incorrect
    =         account = <redacted>
    =     at tests/sources/functional/resources.move:35:10: create_resource_incorrect
    =     at tests/sources/functional/resources.move:33:30: create_resource_incorrect
